pluralsight-webinars/2021-10-introducing-istio/demo2/products-api/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: products-api
  namespace: widgetario
spec:
  host: products-api.widgetario.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
